<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/temperatureTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/weatherIV"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/circle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/windDegreeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/route"
            android:textColor="@color/black"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/windSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/speed"
            android:textColor="@color/black"
            android:textSize="24sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pressureTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/pressure"/>

</LinearLayout>